--- a/index.html
+++ b/index.html
@@ -61,6 +61,32 @@
   
     </div>
 
+
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-app.js"></script>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+<script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-firestore.js"></script>
+
+<script>
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  var firebaseConfig = {
+    apiKey: "AIzaSyBdfAxb82e6XYBXq_idefqzqmDB4QOaaHQ",
+    authDomain: "modern-javascript-888bd.firebaseapp.com",
+    databaseURL: "https://modern-javascript-888bd.firebaseio.com",
+    projectId: "modern-javascript-888bd",
+    storageBucket: "modern-javascript-888bd.appspot.com",
+    messagingSenderId: "285883369938",
+    appId: "1:285883369938:web:9f1357cec57a5fdb62600b",
+    measurementId: "G-BST462K1MQ"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+  const db = firebase.firestore();
+</script>
+
     <script src="scripts /chat.js"></script>
     <script src="scripts /ui.js"></script>
     <script src="scripts /app.js"></script>
